# size

./: .gitignore  CMakeLists.txt  Makefile  README.md  apple.mm  main.cpp
.github/workflows/: build.yml
Solution/: Size.sln  Size.vcxproj  Size.vcxproj.filters
